--- a/photographer.html
+++ b/photographer.html
@@ -1,14 +1,20 @@
-
+<!DOCTYPE html>
 <html>
-    <title>
-        
-    </title>
-
-
-
-
-
-
-
-
+  <head>
+    <title>Maliti photography!</title>
+    <link href="photographer/photographer.css" rel="stylesheet" href="/css/master.css">
+    <strong>photography and graphity</strong>
+  </head>
+  <body style="background: green"><h1><em>Photography deals with taking pictures and editing them</em></h1>
+    <h2>More about maliti photography</h2>
+    <img src="photographer.jpeg" alt="photographer.jpeg">
+    <p>Maliti photography is one of the growing websites that displays pictures that they themselves have edited for their customers.The pictures are edited with consideration of the customers interest
+    We also recomment taking the pictures ourselves because we have high quality cameras that improve our editing work</p>
+<p>our prices are relatively high due to </p>
+<ol>
+  <li>High quality cameras</li>
+  <li>Much experience</li>
+  <li>Travel cost</li>
+  <li>MANAGEMENT COSTS</li>
+</ol>
 </html>
