--- a/photographer.html
+++ b/photographer.html
@@ -3,7 +3,7 @@
   <head>
     <title>Maliti photography!</title>
     <link href="photographer/photographer.css" rel="stylesheet" href="/css/master.css">
-    <strong>photography and graphity</strong>
+    <strong>PHOTOGRAPHY AND GRAPHITY</strong>
   </head>
   <body style="background: green"><h1><em>Photography deals with taking pictures and editing them</em></h1>
     <h2>More about maliti photography</h2>
