--- a/photographer.html
+++ b/photographer.html
@@ -2,13 +2,15 @@
 <html>
   <head>
     <title>Maliti photography!</title>
-    <link href="photographer/photographer.css" rel="stylesheet" href="/css/master.css">
+    <link href="photographer.css"rel="stylesheet"> type="text.css"
     <strong>PHOTOGRAPHY AND GRAPHITY</strong>
   </head>
   <body style="background: green"><h1><em>Photography deals with taking pictures and editing them</em></h1>
     <h2>More about maliti photography</h2>
     <img src="photographer.jpeg" alt="photographer.jpeg">
-    <p>Maliti photography is one of the growing websites that displays pictures that they themselves have edited for their customers.The pictures are edited with consideration of the customers interest
+    <p><div class="portraits">  <img src="photographer.jpeg" alt="photographer.jpeg">
+
+    </div>Maliti photography is one of the growing websites that displays pictures that they themselves have edited for their customers.The pictures are edited with consideration of the customers interest
     We also recomment taking the pictures ourselves because we have high quality cameras that improve our editing work</p>
 <p>our prices are relatively high due to </p>
 <ol>
