--- a/photographer.html
+++ b/photographer.html
@@ -5,9 +5,9 @@
     <link href="photographer.css"rel="stylesheet"> type="text.css"
     <strong>PHOTOGRAPHY AND GRAPHITY</strong>
   </head>
-  <body style="background: green"><h1><em>Photography deals with taking pictures and editing them</em></h1>
+  <body style="background: blue"><h1><em>Photography deals with taking pictures and editing them</em></h1>
     <h2>More about maliti photography</h2>
-    <img src="photographer.jpeg" alt="photographer.jpeg">
+    <img src="download.jpeg" alt="download.jpeg">
     <p><div class="portraits">  <img src="photographer.jpeg" alt="photographer.jpeg">
 
     </div>Maliti photography is one of the growing websites that displays pictures that they themselves have edited for their customers.The pictures are edited with consideration of the customers interest
