--- a/photographer.html
+++ b/photographer.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Maliti photography!</title>
-    <link href="photographer.css"rel="stylesheet"> type="text.css"
+    <link href="photographer.css"rel="stylesheet" type="text.css">
     <strong>PHOTOGRAPHY AND GRAPHITY</strong>
   </head>
   <body style="background: blue"><h1><em>Photography deals with taking pictures and editing them</em></h1>
@@ -17,6 +17,6 @@
   <li>High quality cameras</li>
   <li>Much experience</li>
   <li>Travel cost</li>
-  <li>MANAGEMENT COSTS</li>
+  <li>Management costs</li>
 </ol>
 </html>
