--- a/wildcats.html
+++ b/wildcats.html
@@ -3,13 +3,14 @@
   <head>
      <link href="css/styles.css" rel="stylesheet" type="text/css" media="all">
 <title>Wild cats</title>
-  </head>
+</head>
   <body>
     <h1>Wildcats</h1>
 <p>I'm going to teach you all about wildcats. First, the important stuff:</p>
 <h2 class="important">Types of wildcats</h2>
 <p class="important">There are many types of wildcats.
   <p>Here are some types of wildcats:</p>
+  <img src="wildcats.jpeg" alt="wildcats.jpeg">
 <ul>
   <li>Lion</li>
   <li>Tiger</li>
