--- a/wildcats.html
+++ b/wildcats.html
@@ -4,7 +4,7 @@
      <link href="css/styles.css" rel="stylesheet" type="text/css" media="all">
 <title>Wild cats</title>
 </head>
-  <body>
+  <body style="background: brown"> 
     <h1>Wildcats</h1>
 <p>I'm going to teach you all about wildcats. First, the important stuff:</p>
 <h2 class="important">Types of wildcats</h2>
