--- a/my-programmer-profile.html
+++ b/my-programmer-profile.html
@@ -1,11 +1,28 @@
 <!DOCTYPE html>
 <html>
+<h1><em>MARK MALITI</em></h1>
   <head>
+    <link rel="my programmer-profile" href="/css/master.css">
     <title>
 <strong>MY PROGRAMMING PROFILE</strong>
     </title>
-  </head>
+  </head><em>MY JOURNEY AS A PROGRAMMER.</em>
+<h1><em>Welcome to my my projects and links</em></h1>
+<h2>epg 14+</h2>
+<div class="important">
+
+<h3><strong>Below is a picture of myself...</strong></h2>
   <body><img src="mark.jpg" alt="mark.jpg">
-  <h1><em>MARK MALITI</em></h1>
+    <h3><em>Being very curious to learn coding here are some of my projects with their active links on git hub'</h3></em>
+    <ol>
+      <li>hello-world
+<details contenteditable="true"Its my first project where I decided to expose my like for gaming as my hoby>
+
+</details>
+      </li>
+      <li>wildcats</li>
+      <li>photographer</li>
+    </ol>
+
   </body>
 </html>
