--- a/my-programmer-profile.html
+++ b/my-programmer-profile.html
@@ -2,7 +2,7 @@
 <html>
 <h1><em>MARK MALITI</em></h1>
   <head>
-    <link rel="my programmer-profile" href="/css/master.css">
+    <link rel="stylesheet" href="/css/master.css">
     <title>
 <strong>MY PROGRAMMING PROFILE</strong>
     </title>
