--- a/my-programmer-profile.html
+++ b/my-programmer-profile.html
@@ -2,7 +2,7 @@
 <html>
 <h1><em>MARK MALITI</em></h1>
   <head>
-    <link rel="stylesheet" href="/css/master.css">
+    <link rel="stylesheet" href="/css/styles.css" type="text/css">
     <title>
 <strong>MY PROGRAMMING PROFILE</strong>
     </title>
@@ -16,13 +16,22 @@
     <h3><em>Being very curious to learn coding here are some of my projects with their active links on git hub'</h3></em>
     <ol>
       <li>hello-world
-<details contenteditable="true"Its my first project where I decided to expose my like for gaming as my hoby>
-
-</details>
+<details> contenteditable="true"Its my first project where I decided to expose my like for gaming as my hoby</details>
+<details>contenteditable="link file:///home/mark/Documents/moringa-school-projects/hello-world/hello-world.html
+  </details>"
+  <details>contenteditable="true"It uses UBUNTU language.
+  </details>
       </li>
-      <li>wildcats</li>
-      <li>photographer</li>
-    </ol>
-
-  </body>
+      <li>wildcats
+        <details>onsuspend="Its a brief history of the different breeds of wildcats.This is due to my passion of following whats about with nature">
+          <details>contenteditable="<link file:///home/mark/Documents/moringa-school-projects/wildcats/wildcats.html"
+</details>
+        <details> contenteditable="true"It uses UBUNTU language to code</details>
+      </li>
+      <li>photographer
+        <details>"true"I am good at photography and here i decided to establish my work and advertise it to the world
+  </details>
+        <details>contenteditable="It uses UBUNTU language"</details>
+<details>contenteditable="link file:///home/mark/Documents/moringa-school-projects/photographer/photographer.html">
+<h4>am a form four leaver waiting to join campus this year, astudent at Moringa school</h4>
 </html>
