--- a/my-programmer-profile.html
+++ b/my-programmer-profile.html
@@ -33,5 +33,5 @@
   </details>
         <details>contenteditable="It uses UBUNTU language"</details>
 <details>contenteditable="link file:///home/mark/Documents/moringa-school-projects/photographer/photographer.html">
-<h4>am a form four leaver waiting to join campus this year, astudent at Moringa school</h4>
+<h4>Am form four leaver waiting to join campus this year, astudent at Moringa school</h4>
 </html>
